--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = ["andyhewitt <andyhewitt1987@gmail.com>"]
 python = "^3.9"
 Flask = "^2.2.2"
 flask-sqlalchemy = "^3.0.2"
+requests = "^2.28.1"
+celery = "^5.2.7"
+APScheduler = "^3.9.1"
 
 [tool.poetry.dev-dependencies]
 
