--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Flask = "^2.2.2"
 flask-sqlalchemy = "^3.0.2"
 requests = "^2.28.1"
 gunicorn = "^20.1.0"
+APScheduler = "^3.9.1"
 
 [tool.poetry.dev-dependencies]
 
