--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ flask-sqlalchemy = "^3.0.2"
 requests = "^2.28.1"
 gunicorn = "^20.1.0"
 APScheduler = "^3.9.1"
+flask-cors = "^3.0.10"
+flask-migrate = "^4.0.1"
 
 [tool.poetry.dev-dependencies]
 
