--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -14,6 +14,7 @@ APScheduler = "^3.9.1"
 flask-cors = "^3.0.10"
 flask-migrate = "^4.0.1"
 psycopg2-binary = "^2.9.5"
+flask-login = "^0.6.2"
 
 [tool.poetry.dev-dependencies]
 
